# jni_test

./: README.md
app/: build.gradle
app/src/androidTest/java/com/god/seep/jni_test/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Unix_wrap.cxx  base64.c  base64.h  encript.cpp  native-lib.cpp  native-thread.cpp  native-thread.h  wrapper_log.h
app/src/main/cpp/echo/: CMakeLists.txt  echo.cpp  native-client.cpp  native-client.h  native-local.cpp  native-local.h  native-socket.cpp  native-socket.h
app/src/main/cpp/meida/: CMakeLists.txt  Common.cpp  Common.h  media-avi.cpp  media-avi.h  media-render.cpp  media-render.h  media.cpp  media.h
app/src/main/java/com/god/seep/jni_test/: MainActivity.kt  ThreadActivity.kt  Unix.java  UnixJNI.java
app/src/main/java/com/god/seep/jni_test/media/: BasePlayerActivity.kt  BitmapPlayerActivity.kt  MediaAviActivity.kt  NativeWindowActivity.kt  OpenGLPlayerActivity.kt
app/src/main/java/com/god/seep/jni_test/socket/: BaseEchoActivity.kt  EchoClientActivity.kt  EchoLocalActivity.kt  EchoServerActivity.kt
app/src/main/res/layout/: activity_bitmap_player.xml  activity_echo_client.xml  activity_echo_local.xml  activity_echo_server.xml  activity_main.xml  activity_media_avi.xml  activity_native_window.xml  activity_open_glplayer.xml  activity_thread.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/god/seep/jni_test/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
